# shaman-core

./: .buildinfo  .gitignore  CMakeLists.txt  CODE-OF-CONDUCT.md  Config.cmake.in  Doxyfile  PROPOSAL.md  README.md  code_index.html  genindex.html  objects.inv  resource_tracing.html  searchindex.js
.github/workflows/: documentation.yml
apps/: main.cpp
docs/: breakpoint.md  build.md  code_coverage.md  cross-platform-dev.md  index.md  requirements.txt  syscall.md  use_cases.md
docs/source/: building.rst  code_coverage.rst  conf.py  index.rst  resource_tracing.rst  syscall_tracing.rst
eagle_coverage/: CMakeLists.txt  main.cpp
examples/binary_coverage/: CMakeLists.txt  coverage_consumer.cpp  main.cpp  run.sh
examples/syscall_tracer/: CMakeLists.txt  main.cpp
include/: breakpoint_mngr.hpp  breakpoint_reader.hpp  config.hpp  coverage_trace_writer.hpp  debugger.hpp  function_tracing.hpp  linux_debugger.hpp  memory.hpp  mempipe.hpp  modules.hpp  registers.hpp  syscall.hpp  syscall_collections.hpp  syscall_injector.hpp  syscall_mngr.hpp  tracee.hpp
script/: arm-mmap-shellcode.s  build-docs.sh  build.sh  coverage_parser.py  cross_compile.sh  cross_compile_amd64.sh  cross_compile_arm.sh  cross_compile_arm64.sh  gen_linux_sys_tbl.py  generate-ghidra-bb.sh  ghidra_bb_expoter.py  linux_syscall_parser.py  run.sh  test_build.sh
src/: breakpoint.cpp  breakpoint.hpp  breakpoint_mngr.cpp  breakpoint_mngr.hpp  breakpoint_reader.cpp  breakpoint_reader.hpp  config.hpp  coverage_trace_writer.cpp  coverage_trace_writer.hpp  debug_opts.cpp  debug_opts.hpp  debugger.cpp  debugger.hpp  linux_debugger.cpp  linux_debugger.hpp  main.cpp  memory.cpp  memory.hpp  modules.cpp  modules.hpp  platform.h  ptrace.cpp  ptrace.h  registers.cpp  registers.hpp  syscall.cpp  syscall.hpp  syscall_injector.cpp  syscall_injector.hpp  syscall_mngr.cpp  syscall_mngr.hpp  tracee.cpp  tracee.hpp  utils.hpp
src/arch/arm/: arm32_breakpoint.cpp  arm32_syscall.cpp  arm64_breakpoint.cpp  arm64_syscall.cpp
src/arch/intel/: amd64_breakpoint_inject.hpp  amd64_registers.cpp  amd64_syscall.c  amd64_syscall.cpp  breakpoint.cpp  registers.cpp  syscall_x64.cpp  syscall_x64.h  syscall_x64.hpp  x86_breakpoint.cpp  x86_register.cpp  x86_registers.cpp  x86_syscall.cpp
src/mempipe/: main.cpp  mempipe.hpp
src/traceme/: Makefile
src/traceme/src/: arm64_syscall.h  main.c
src/witch/: basic_block.cpp  basic_block.hpp  branch_data.cpp  branch_data.hpp  inst_analyzer.cpp  inst_analyzer.hpp  witch.cpp  witch.hpp
test/: oop_test.cpp  thead_testing.sh
test/network/: client.c  server.c
test/test_prog/: prog.c
test/unittest/: test.cpp
